all/macro_procedural_builder_1/rust/builder/test/08-unrecognized-attribute.stderr
error: expected `builder( each = "..." )`
  --> ../../../rust/builder/test/08-unrecognized-attribute.rs:24:3
   |
24 |   #[builder( eac = "arg" )]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^
